2002-12-20  Alan Modra  <amodra@bigpond.net.au>

	* README <building ar>: Don't use libibery's needed_list or
	required_list, instead link libiberty/*.o.

2002-12-19  Kazu Hirata  <kazu@cs.umass.edu>

	* doc/binutils.texi: Fix typos.

2002-12-14  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* doc/binutils.texi: Add missing parenthesis.

2002-12-15  Nick Kelsey  <nickk@ubicom.com>

	* objcopy.c: Add --prefix-symbols=<prefix> option to rename all
	symbols by adding the given prefix to the begining of the symbol
	name. This is useful to provide name space seperation regardless
	of how the object file was created. Added --prefix-sections=
	<prefix> and --prefix-alloc-sections=<prefix> options to rename all
	sections (or all sections with the alloc flag set) by adding the given
	prefix to the begining of the symbol name.
	* NEWS: Mention this new feature.
	* doc/binutils.texi: Document this new feature.

2002-12-13  Alan Modra  <amodra@bigpond.net.au>

	* dlltool.c (mcore_elf_gen_out_file): Replace all occurrences of
	dyn_string_append with dyn_string_append_cstr.

	* emul_aix.c (ar_emul_aix_create): Remove unused function.

2002-12-10  James Cownie <jcownie@etnus.com>

	* readelf.h (get_TAG_name, get_AT_name,
	read_and_display_attr_value): Add support for UPC extensions to
	DWARF2 spec.
	* NEWS: Mention this new support.

2002-12-08  Alan Modra  <amodra@bigpond.net.au>

	* NEWS: Mention that bfd no longer declares a "boolean" type.

2002-12-07  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (process_program_headers): When setting loadaddr, don't
	assume segment size is 4k.  Use p_align instead.
	(loadaddr): Change from int to long.
	(dynamic_addr, dynamic_info, version_info): Likewise.
	(process_dynamic_segment <syminsz>): Likewise.
	(process_dynamic_segment): Adjust print format string.
	(rela_addr, rela_size): Delete.
	(process_relocs): Formatting.

2002-12-05  Jim Wilson  <wilson@redhat.com>

	* configure.in (OBJDUMP_DEFS): Define SKIP_ZEROES as 16 for IA-64.