@@ -1,3 +1,14 @@
+2002-12-23  Nick Clifton  <nickc@redhat.com>
+
+	* strings.c (isgraphic): Replace definition with STRING_ISGRAPHIC
+	macro.  Handle 'S' encoding, accepting 8-bit characters.
+	(main): Parse 'S' encoding.
+	(get_char): Accept 'S' encoding.
+	(print_strings): Use STRING_ISGRAPHIC.
+	(usage): Document support of 'S' encoding.
+	* doc/binutils.texi: Document support of 'S' encoding/
+	* NEWS: Mention new feature.
+
 2002-12-20  Alan Modra  <amodra@bigpond.net.au>
 
 	* README <building ar>: Don't use libibery's needed_list or
